--- a/dubladas/Sherlock/01temporada/seriesmed-dublada-sherlock-temp01ep01.htm
+++ b/dubladas/Sherlock/01temporada/seriesmed-dublada-sherlock-temp01ep01.htm
@@ -26,10 +26,15 @@
 <a href="../../../seriesmed.htm" ><img class="photo_00004" src="../../../photos/photo_00004.png"></a>
 
 
+<div class="explorer_00010">
+
+
+</div>
+
 
 
 <video id="MY_VIDEO_1" class="video-js vjs-default-skin" controls
- preload="auto" width="640" height="264" poster="MY_VIDEO_POSTER.jpg"
+ preload="auto" width="720" height="480" poster="MY_VIDEO_POSTER.jpg"
  data-setup="{}">
  <source src="" type='video/mp4'>
  <source src="" type='video/webm'>
