Organização do codigo
espera do primeiro video do site

--- a/dubladas/Sherlock/01temporada/seriesmed-dublada-sherlock-temp01ep01.htm
+++ b/dubladas/Sherlock/01temporada/seriesmed-dublada-sherlock-temp01ep01.htm
@@ -1,9 +1,7 @@
-<html>
+﻿<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="stylesheet" type="text/css" href="../../../style.css" />
-<link href="http://vjs.zencdn.net/4.12/video-js.css" rel="stylesheet">
-<script src="http://vjs.zencdn.net/4.12/video.js"></script>
 </head>
 <body class="body_page">
 <div class="bar_down"></div>
@@ -24,26 +22,7 @@
 <a class="link_00005" href="#" ><div class="explorer_00008"></div>
 <div class="explorer_00009"></div></a>
 <a href="../../../seriesmed.htm" ><img class="photo_00004" src="../../../photos/photo_00004.png"></a>
-
-
 <div class="explorer_00010">
-
-
 </div>
-
-
-
-<video id="MY_VIDEO_1" class="video-js vjs-default-skin" controls
- preload="auto" width="720" height="480" poster="MY_VIDEO_POSTER.jpg"
- data-setup="{}">
- <source src="" type='video/mp4'>
- <source src="" type='video/webm'>
- <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-</video>
-
-
-
-
-
 </body>
 </html>
