--- a/dubladas/Sherlock/01temporada/seriesmed-dublada-sherlock-temp01ep01.htm
+++ b/dubladas/Sherlock/01temporada/seriesmed-dublada-sherlock-temp01ep01.htm
@@ -24,5 +24,8 @@
 <a href="../../../seriesmed.htm" ><img class="photo_00004" src="../../../photos/photo_00004.png"></a>
 <div class="explorer_00010">
 </div>
+<video id="video_1" controls="controls">
+<source src="https://r2---sn-hp57knly.c.docs.google.com/videoplayback?requiressl=yes&id=9c263b2d1cc6475e&itag=18&source=webdrive&app=docs&ip=189.123.56.127&ipbits=8&expire=1442957366&sparams=requiressl,id,itag,source,ip,ipbits,expire&signature=3C27B6277BA5A6CBDA64BB07F17029A8455A86E1.1C8A49429029D852431C1368CFF892C4BD5E23C5&key=ck2&mm=30&mn=sn-hp57knly&ms=nxu&mt=1442953618&mv=m&nh=IgpwcjAzLm1pYTA0Kgw3Mi4xNC4yMTUuOTg&pl=19&cpn=4LHNwRDBbk4b-Dto&c=WEB&cver=html5" type='video/mp4'/>
+</video>
 </body>
 </html>
