--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,8 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </head>
 <body class="body_page">
 <div class="bar_down"></div>
