adicionado arquivos e limpeza do codigo etc

--- a/dubladas/Sherlock/seriesmed-dublada-sherlock-01temp.htm
+++ b/dubladas/Sherlock/seriesmed-dublada-sherlock-01temp.htm
@@ -13,12 +13,19 @@
     <a class="link_00003" href="../../index.htm"><div class="explorer_00004"></div>
     <p class="explorer_00005">X</p></a>
     <div class="explorer_00006">
-    <ul class="explorer_00007">
-      <li class="ab">Episódio 01 - Um Estudo em Rosa</li>
-      <li><a  href="#" class="link_00006"></a></li>
-      <li><a href="#" class="link_00006"></a></li>
-    </ul>
     </div>
+    <ul class="explorer_00007">
+      <li class="ab">
+        Episódio 01 - Um Estudo em Rosa
+      </li>
+      <li class="g">
+        Episódio 02 - O Banqueiro Cego
+      </li>
+      <li>
+        <a href="#" class="link_00006">
+        </a>
+      </li>
+    </ul>
     <img class="photo_00002"src="../../photos/photo_00002.png"/>
     <a class="link_00004"href="../../seriesmin.htm"><img class="photo_00003"src="../../photos/photo_00002.png"/></a>
     <a class="link_00005" href="#" >
@@ -29,7 +36,91 @@
     </a>
     <div class="a">
     </div>
-    <!--Vai aparecer-->
-
+    <!--Vai aparecer ep 01-->
+    <img class="b" src="../../photos/estudo_em_rosa_01.jpg"/>
+    <h1 class="c">
+      Um Estudo Em Rosa
+    </h1>
+    <ul class="d">
+      <li>
+        Duração: 01H, 28 Min
+      </li>
+      <li>
+        Ídioma: Português
+      </li>
+    </ul>
+    <ul class="e">
+      <li>
+        <h4>
+          <a href="http://goo.gl/lrYvkH" class="f">
+            MKV 720P Dublado - 1,4GB
+          </a>
+        </h3>
+      </li>
+      <li>
+        <h4>
+          <a href="http://goo.gl/qDC7su" class="f">
+            AVI 480P Dual Áudio + Legenda - 881MB
+          </a>
+        </h4>
+      </li>
+      <li>
+        <h4>
+          <a href="http://goo.gl/Qysh18" class="f">
+            MP4 480P Dublado - 326MB
+          </a>
+        </h4>
+      </li>
+      <li>
+        <h4>
+          <a href="http://goo.gl/1tpMuS" class="f">
+             Bluray MKV 1080P Dual Áudio - 1,6GB
+          </a>
+        </h4>
+      </li>
+    </ul>
+    <!-- Vai aparecer ep2-->
+    <img class="h" src="../../photos/o_banqueiro_cego.jpg">
+    <h1 class="opu">
+      O Banqueiro Cego
+    </h1>
+    <ul class="wqe">
+      <li>
+        Duração:
+      </li>
+      <li>
+        Ídioma: Português
+      </li>
+    </ul>
+    <ul class="poiu">
+      <li>
+        <h4>
+          <a href="http://goo.gl/FLqNG8" class="dsa">
+            MKV 720P Dublado - 1,4GB
+          </a>
+        </h3>
+      </li>
+      <li>
+        <h4>
+          <a href="" class="dsa">
+            AVI 480P Dual Áudio + Legenda
+          </a>
+        </h4>
+      </li>
+      <li>
+        <h4>
+          <a href="" class="dsa">
+            MP4 480P Dublado
+          </a>
+        </h4>
+      </li>
+      <li>
+        <h4>
+          <a href="" class="dsa">
+             Bluray MKV 1080P Dual Áudio
+          </a>
+        </h4>
+      </li>
+    </ul>
   </body>
 </html>
