--- a/dubladas/Sherlock/seriesmed-dublada-sherlock-list-temp.htm
+++ b/dubladas/Sherlock/seriesmed-dublada-sherlock-list-temp.htm
@@ -1,7 +1,8 @@
+<!doctype html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="../../style.css" />
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="../../style.css"/>
 </head>
 <body class="body_page">
 <div class="bar_down"></div>
@@ -11,7 +12,7 @@
 <a class="link_00003" href="../../index.htm"><div class="explorer_00004"></div>
 <p class="explorer_00005">X</p></a>
 <div class="explorer_00006">
-<ul class="explorer_00007">
+<ul class="ab">
 <li><a  href="seriesmed-dublada-sherlock-01temp.htm" class="link_00006">1ª Temporada</a></li>
 <li><a  href="#" class="link_00006">2ª Temporada</a></li>
 <li><a href="#" class="link_00006">3º Temporada</a></li>
