--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,19 @@
+<!doctype html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="style.css" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script type="text/javascript" src="script.js"></script>
-</head>
-<body class="body_page">
-<div class="bar_down"></div>
-<a class="link_00001" href="home.htm"><img class="photo_00001" src="photos/photo_00001.png"/></a>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <script src="jquery-2.1.4.min.js">
+    </script>
+    <script type="text/javascript" src="scripts/index.js">
+    </script>
+  </head>
+  <body class="body_page">
+    <div class="bar_down">
+    </div>
+    <a class="link_00001" href="home.htm">
+      <img class="photo_00001" src="photos/photo_00001.png"/>
+    </a>
+    <img class="wef" src="photos/beta.png"/>
+  </body>
 </html>
