adicionados mais episódios do sherlock

--- a/desktop.htm
+++ b/desktop.htm
@@ -10,6 +10,11 @@
     <a class="link_00001" href="home.htm">
       <img class="photo_00001" src="photos/photo_00001.png"/>
     </a>
-    <img class="wef" src="photos/beta.png"/>
+    <img class="jhg" src="photos/report2.png"/>
+    <p class="kdfmn">
+      <b>
+        Reportar Bug
+      </b>
+    </p>
   </body>
 </html>
