--- a/dubladas/Sherlock/seriesmed-dublada-sherlock-01temp.htm
+++ b/dubladas/Sherlock/seriesmed-dublada-sherlock-01temp.htm
@@ -3,7 +3,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" type="text/css" href="../../style.css" />
     <script src="../../jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="../../scripts/script_sherlock_1_temp.js"></script>
+    <script type="text/javascript" src="../../scripts/seriesmed-dublada-sherlock-01temp.js"></script>
   </head>
   <body class="body_page">
     <div class="bar_down"></div>
@@ -21,9 +21,8 @@
       <li class="g">
         Episódio 02 - O Banqueiro Cego
       </li>
-      <li>
-        <a href="#" class="link_00006">
-        </a>
+      <li class="salgado">
+        Episódio 03 - O Grande Jogo
       </li>
     </ul>
     <img class="photo_00002"src="../../photos/photo_00002.png"/>
@@ -102,21 +101,64 @@
       </li>
       <li>
         <h4>
-          <a href="" class="dsa">
+          <a href="http://goo.gl/oByw9v" class="dsa">
+            AVI 480P Dual Áudio + Legenda - 887MB
+          </a>
+        </h4>
+      </li>
+      <li>
+        <h4>
+          <a href="http://goo.gl/a8iKF0" class="dsa">
+            MP4 480P Dublado - 327MB
+          </a>
+        </h4>
+      </li>
+      <li>
+        <h4>
+          <a href="http://goo.gl/5TKwtV" class="dsa">
+             Bluray MKV 1080P Dual Áudio - 1,6GB
+          </a>
+        </h4>
+      </li>
+    </ul>
+    <!--vai_aparecer_ep_03-->
+    <img class="supermercado" src="../../photos/o_grande_jogo.jpg"/>
+    <h1 class="planta">
+      O Grande Jogo
+    </h1>
+    <ul class="cauda">
+      <li>
+        Duração:
+      </li>
+      <li>
+        Ídioma: Português
+      </li>
+    </ul>
+    <ul class="planes">
+      <li>
+        <h4>
+          <a href="" class="nove">
+            MKV 720P Dublado
+          </a>
+        </h3>
+      </li>
+      <li>
+        <h4>
+          <a href="" class="nove">
             AVI 480P Dual Áudio + Legenda
           </a>
         </h4>
       </li>
       <li>
         <h4>
-          <a href="" class="dsa">
+          <a href="" class="nove">
             MP4 480P Dublado
           </a>
         </h4>
       </li>
       <li>
         <h4>
-          <a href="" class="dsa">
+          <a href="" class="nove">
              Bluray MKV 1080P Dual Áudio
           </a>
         </h4>
