--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="jquery-2.1.4.min.js">
-    </script>
-    <script type="text/javascript" src="scripts/index.js">
-    </script>
+    <title></title>
+    <script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
   </head>
   <body>
+
   </body>
 </html>
