--- a/desktop.html
+++ b/desktop.html
@@ -14,7 +14,24 @@
     <div class="frente">
     </div>
     <ul class="quadrado">
-      <li>Séries</li>
+      <li class="moto">
+        <font size="5">
+          <b>Séries</b>
+        </font>
+      </li>
+    </ul>
+    <img class="retardado" src="photo/explorer.png"/>
+    <div class="codigo">
+    </div>
+    <img src="photo/folder.png" class="roupa"/>
+      <h1 class="series">Séries</h1>
+    <!--<video width="720" height="480" controls>
+    <source src="http://goo.gl/wxBPjb" type="video/mp4">
+    <source src="movie.ogg" type="video/ogg">
+    Your browser does not support the video tag.
+    </video>-->
+    <ul class="biscoito">
+      <li class="bosta">Dubladas</li>
     </ul>
   </body>
 </html>
