limpeza do codigo do site

--- a/desktop.html
+++ b/desktop.html
@@ -8,30 +8,44 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <div class="biplano">
+    <!--Tudo que está sentro da barra de tarefas-->
+    <div class="barra_de_tarefas">
     </div>
-    <img class="ovelha" src="photo/home.png"/>
-    <div class="frente">
+    <img class="botao_home" src="photo/home.png"/>
+    <!--Referente a div que mostra o menu HOME na tela inicIAL-->
+    <div class="fundo_da_home">
+      <ul class="lista_da_home">
+        <li class="lista_da_home_series">Séries</li>
+      </ul>
     </div>
-    <ul class="quadrado">
-      <li class="moto">
-        <font size="5">
-          <b>Séries</b>
-        </font>
-      </li>
-    </ul>
-    <img class="retardado" src="photo/explorer.png"/>
-    <div class="codigo">
+    <!--Referente a janela do explorador de arquivos para a pasta Séries-->
+    <div class="seletor_janela_explorer_series">
+      <img class="janela_explorer" src="photo/explorer.png"/>
+      <p class="titulo_da_janela_series">Séries</p>
+      <ul class="lista_janela_series">
+        <li class="botao_series_dubladas">Dubladas</li>
+      </ul>
+      <div class="botao_de_fechar_series">
+      </div>
     </div>
-    <img src="photo/folder.png" class="roupa"/>
-      <h1 class="series">Séries</h1>
+    <!--Listas - conteudo da janela explorer-->
+      <ul class="lista_de_series_dubladas">
+        <li>Sherlock</li>
+      </ul>
+
+
+
+
+
+
+
+
+
+
     <!--<video width="720" height="480" controls>
     <source src="http://goo.gl/wxBPjb" type="video/mp4">
     <source src="movie.ogg" type="video/ogg">
     Your browser does not support the video tag.
     </video>-->
-    <ul class="biscoito">
-      <li class="bosta">Dubladas</li>
-    </ul>
   </body>
 </html>
