Correção de bug
corrigido bug que não permitia uma segunda exibição de elementos.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/desktop.js"></script>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+    <!--Tudo que está sentro da barra de tarefas-->
+    <div class="barra_de_tarefas">
+    </div>
+    <img class="botao_home" src="photo/home.png"/>
+    <!--Referente a div que mostra o menu HOME na tela inicIAL-->
+    <div class="fundo_da_home">
+      <ul class="lista_da_home">
+        <li class="lista_da_home_series">Séries</li>
+      </ul>
+    </div>
+    <!--Referente a janela do explorador de arquivos para a pasta Séries-->
+      <img class="janela_explorer" src="photo/explorer.png"/>
+      <p class="titulo_da_janela_series">Séries</p>
+      <ul class="lista_janela_series">
+        <li class="botao_series_dubladas">Dubladas</li>
+      </ul>
+      <div class="botao_de_fechar_series">
+      </div>
 
+    <!--Listas de series dublada - conteudo da janela explorer-->
+      <p class="sherlock_serie_button">Sherlock</p>
+    <!--lista de temporadas de sherlock-->
+    <ul class="lista_de_temporadas_sherlock">
+      <li class="button_01temporada_sherlock">1º Temporada</li>
+      <li>2º Temporada</li>
+      <li>3º Temporada</li>
+    </ul>
+    <!--Lista de episódios sherlock 1 temporada-->
+    <ul class="lista_de_episodios_sherlock_01temporada">
+      <li>01-Um Estudo em Rosa</li>
+    </ul>
+    <!--opções do primeiro episódio da primeira temporada de sherclock-->
+
+
+
+
+
+
+
+
+
+    <!--<video width="720" height="480" controls>
+    <source src="http://goo.gl/wxBPjb" type="video/mp4">
+    <source src="movie.ogg" type="video/ogg">
+    Your browser does not support the video tag.
+    </video>-->
   </body>
 </html>
