Adicionado opção de fazer download de episódios

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <script type="text/javascript" src="scripts/jquery-2.1.4.min.js"></script>
-    <script type="text/javascript" src="scripts/desktop.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
@@ -37,22 +37,35 @@
     </ul>
     <!--Lista de episódios sherlock 1 temporada-->
     <ul class="lista_de_episodios_sherlock_01temporada">
-      <li>01-Um Estudo em Rosa</li>
+      <li class="button_01episodio_01temporada_sherlock_dublado">01-Um Estudo em Rosa</li>
+      <li class="">02-O Banqueiro Cego</li>
+      <li class="">03-O Grande Jogo</li>
     </ul>
     <!--opções do primeiro episódio da primeira temporada de sherclock-->
-
-
-
-
-
-
-
-
-
-    <!--<video width="720" height="480" controls>
+    <div class="opcao_primaria_do_01episodio_01temporada_sherlock_dublado">
+      <ul class="option_primary_do_01epsodio_01temporada_sherlock_dublado">
+        <li class="button_baixar_01episodio_01temporada_sherlock_dublada">Baixar</li>
+        <li class="button_assistir_01episodio_01temporada_sherlock_dublada">Assistir</li>
+      </ul>
+    </div>
+    <!--janela da 1 episodio da 1 temporada de sherlock dublada-->
+    <img class="fundo_do_video" src="photo/janela.png"/>
+    <video class="video_01episodio_01temporada_sherlock_dublada" width="806" height="539" controls>
     <source src="http://goo.gl/wxBPjb" type="video/mp4">
     <source src="movie.ogg" type="video/ogg">
     Your browser does not support the video tag.
-    </video>-->
+    </video>
+    <div class="button_fechar_video">
+    </div>
+    <!--opçoes secundários de baixar o 01episodio 01temporada de sherlock dublado-->
+    <div class="opcoes_secundarias_de_baixar_o_01episodio_01temporada_de_sherlock_dublada">
+      <p class="fechar_janela_de_opcoes_secundarias_de_baixar_o_01episodio_01temporada_de_sherlock_dublada"><b>X</b></p>
+      <div class="area_central_de_opcoes_secundaris_de_baixar_o_01episodio_01temporada_de_sherlock_dublada">
+        <ul class="lista_de_formatos_e_resolucoes_para_as_opcoes_secundaris_de_baixar_o_01episodio_01temporada_de_sherlock_dublada">
+          <li><a href="http://goo.gl/dNp59N">Versão MKV 720P Dublado 1,4GB</a></li>
+        </ul>
+      </div>
+      <p class="titulo_opcoes_secundarias_de_baixar_01epsodio_01temporada_sherlock_dublado">Escolha um formato e resolução</p>
+    </div>
   </body>
 </html>
